Prevent image overflow on mobiles

--- a/src/main/resources/static/css/bp.css
+++ b/src/main/resources/static/css/bp.css
@@ -84,4 +84,5 @@ pre {
     display: block;
     margin-left: auto;
     margin-right: auto;
+    max-width: 100%;
 }
